🔧 fix(styles): update alignment styles for flex layout ✨ feat(styles): add custom width classes for button elements 🔧 fix(styles): update flex layout styles for button container
🔨 refactor(styles): comment out unused flex properties in _layout.scss

--- a/src/styles/wpcore/_buttons.scss
+++ b/src/styles/wpcore/_buttons.scss
@@ -1,5 +1,5 @@
-@use 'tokens';
-@use 'utilities/mixins';
+@use "tokens";
+@use "utilities/mixins";
 
 // =================================
 // Buttons Style Functions (mixins, extends, etc.)
@@ -25,21 +25,11 @@
 }
 
 %darkButton {
-  @include buttonStyle(
-    tokens.$c-darkGreen-700,
-    tokens.$c-white,
-    tokens.$c-darkGreen-800,
-    tokens.$c-darkGreen-800
-  );
+  @include buttonStyle(tokens.$c-darkGreen-700, tokens.$c-white, tokens.$c-darkGreen-800, tokens.$c-darkGreen-800);
 }
 
 %lightButton {
-  @include buttonStyle(
-    tokens.$c-white,
-    tokens.$c-gray-800,
-    tokens.$c-limeGreen-500,
-    tokens.$c-limeGreen-200
-  );
+  @include buttonStyle(tokens.$c-white, tokens.$c-gray-800, tokens.$c-limeGreen-500, tokens.$c-limeGreen-200);
 }
 
 // =================================
@@ -88,6 +78,29 @@
       }
     }
   }
+
+  &.has-custom-width {
+    .wp-element-button {
+      width: 100%;
+    }
+
+    &.wp-block-button__width-100 {
+      flex-basis: 100%;
+      width: 100%;
+    }
+    &.wp-block-button__width-75 {
+      flex-basis: 75%;
+      width: 75%;
+    }
+    &.wp-block-button__width-50 {
+      flex-basis: 50%;
+      width: 50%;
+    }
+    &.wp-block-button__width-25 {
+      flex-basis: 25%;
+      width: 25%;
+    }
+  }
 }
 
 button.is-style-dark,
@@ -125,15 +138,12 @@ a.is-style-link {
   }
 }
 
-.wp-block-buttons {
+:where(.wp-block-buttons) {
   &:where(.is-layout-flex) {
-    display: flex;
     flex-wrap: wrap;
-    // align-items: center;
-    gap: 1rem;
-  }
 
-  .wp-block-column & {
-    flex-direction: column;
+    &:where(.is-vertical) {
+      flex-wrap: nowrap;
+    }
   }
 }
